--- a/ControleFinanceiro/MainWindow.xaml
+++ b/ControleFinanceiro/MainWindow.xaml
@@ -7,13 +7,32 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Title="ControleFinanceiro">
+    Title="Controle Financeiro">
 
     <Window.SystemBackdrop>
         <MicaBackdrop />
     </Window.SystemBackdrop>
 
     <Grid>
+        <NavigationView x:Name="NavView"
+                        PaneDisplayMode="LeftCompact"
+                        IsBackButtonVisible="Collapsed"
+                        IsPaneToggleButtonVisible="False"
+                        IsSettingsVisible="False">
+            <NavigationView.MenuItems>
+                <NavigationViewItem x:Name="nviOperacaoFinanceira" Tag="OperacaoFinanceira" Margin="0,34,0,0">
+                    <Image Source="/Assets/operacao_financeira_64x.png" Margin="0" HorizontalAlignment="Stretch" Width="24" Height="24"/>
+                </NavigationViewItem>
+                <NavigationViewItem x:Name="nviCategoria" Tag="Categoria">
+                    <Image Source="/Assets/categoria_64x.png" Margin="0" HorizontalAlignment="Stretch"  Width="24" Height="24"/>
+                </NavigationViewItem>
+                <NavigationViewItem x:Name="nviEntidadeFinanceira" Tag="EntidadeFinanceira">
+                    <Image Source="/Assets/entidade_64x.png" Margin="0" HorizontalAlignment="Stretch"  Width="24" Height="24"/>
+                </NavigationViewItem>
+            </NavigationView.MenuItems>
 
+            <Frame x:Name="MainFrame" Background="{StaticResource Vermelho2}"/>
+
+        </NavigationView>
     </Grid>
 </Window>
