--- a/ControleFinanceiro/Themes/Generic.xaml
+++ b/ControleFinanceiro/Themes/Generic.xaml
@@ -16,4 +16,18 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <Style TargetType="local2:CustomControl1" xmlns:local2="using:ControleFinanceiro.Telas">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="local2:CustomControl1">
+                    <Border
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
